crates/vite_task_plan/tests/test_plan_snapshots/fixtures/cache-keys/snapshots/query - lint and echo with extra args.snap
---
source: crates/vite_task_bin/tests/test_snapshots/main.rs
expression: "&plan_json"
input_file: crates/vite_task_bin/tests/test_snapshots/fixtures/cache-keys
---
{
  "root_node": {
    "Expanded": [
      {
        "key": [
          "<workspace>/",
          "lint-and-echo"
        ],
        "node": {
          "task_display": {
            "package_name": "",
            "task_name": "lint-and-echo",
            "package_path": "<workspace>/"
          },
          "items": [
            {
              "execution_item_display": {
                "task_display": {
                  "package_name": "",
                  "task_name": "lint-and-echo",
                  "package_path": "<workspace>/"
                },
                "command": "vite lint",
                "and_item_index": 0,
                "cwd": "<workspace>/"
              },
              "kind": {
                "Leaf": {
                  "Spawn": {
                    "cache_metadata": {
                      "spawn_fingerprint": {
                        "cwd": "",
                        "program_fingerprint": {
                          "OutsideWorkspace": {
                            "program_name": "oxlint"
                          }
                        },
                        "args": [],
                        "env_fingerprints": {
                          "fingerprinted_envs": {},
                          "pass_through_env_config": [
                            "<default pass-through envs>"
                          ]
                        },
                        "fingerprint_ignores": null
                      },
                      "execution_cache_key": {
                        "kind": {
                          "UserTask": {
                            "task_name": "lint-and-echo",
                            "and_item_index": 0,
                            "extra_args": []
                          }
                        },
                        "origin_path": ""
                      }
                    },
                    "spawn_command": {
                      "program_path": "<tools>/node_modules/.bin/oxlint",
                      "args": [],
                      "all_envs": {
                        "NO_COLOR": "1",
                        "PATH": "<workspace>/node_modules/.bin:<tools>/node_modules/.bin"
                      },
                      "cwd": "<workspace>/"
                    }
                  }
                }
              }
            },
            {
              "execution_item_display": {
                "task_display": {
                  "package_name": "",
                  "task_name": "lint-and-echo",
                  "package_path": "<workspace>/"
                },
                "command": "echo 'Linting complete'",
                "and_item_index": 1,
                "cwd": "<workspace>/"
              },
              "kind": {
                "Leaf": {
                  "InProcess": {
                    "kind": {
                      "Echo": {
                        "strings": [
                          "Linting complete"
                        ],
                        "trailing_newline": true
                      }
                    }
                  }
                }
              }
            }
          ]
        },
        "neighbors": []
      }
    ]
  }
}
